<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="heading_main">Hai! Selamat datang!</string>
    <string name="title_tautan">Ceramah Ust. Adi Hidayat</string>
    <string name="tautan_button">Open in Youtube</string>
    <string name="profile_button">M Reza Ali F</string>
    <string name="tv_fa_nama">Nama :</string>
    <string name="tv_fa_fadhlan">Fadhlan Failusuf Salam</string>
    <string name="tv_fa_profile">Profile</string>
    <string name="tv_fa_nim">NIM :</string>
    <string name="tv_fa_142">18523142</string>
</resources>