<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".FadhlanActivity">


    <TextView
        android:id="@+id/tv_fa_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fa_profile"
        android:textSize="24sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fa_nama"
        android:padding="8dp"
        android:layout_margin="8dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fa_fadhlan"
        android:padding="8dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fa_nim"
        android:padding="8dp"
        android:layout_margin="8dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fa_142"
        android:padding="8dp">

    </TextView>



</androidx.appcompat.widget.LinearLayoutCompat>